--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,6 +16,7 @@
         android:orientation="vertical">
 
         <com.gigamole.library.ShadowLayout
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:sl_shadow_angle="45"
@@ -29,20 +29,21 @@
                 android:layout_height="56dp"
                 android:layout_marginBottom="68dp"
                 android:adjustViewBounds="true"
-                android:src="@drawable/ic_logo"/>
+                android:src="@drawable/ic_logo" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|center_horizontal"
                 android:text="HOW WE WORK"
-                android:typeface="sans"
                 android:textColor="#414141"
-                android:textSize="18sp"/>
+                android:textSize="18sp"
+                android:typeface="sans" />
 
         </com.gigamole.library.ShadowLayout>
 
         <com.gigamole.library.ShadowLayout
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:sl_shadow_angle="45"
@@ -64,50 +65,50 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="vertical">
 
                         <ImageView
                             android:layout_width="140dp"
                             android:layout_height="140dp"
                             android:adjustViewBounds="true"
-                            android:src="@drawable/ic_strategy"/>
+                            android:src="@drawable/ic_strategy" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:text="Strategy"
-                            android:typeface="sans"
                             android:textColor="#3d80b9"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp"
+                            android:typeface="sans" />
 
                     </LinearLayout>
 
                     <View
                         android:layout_width="24dp"
-                        android:layout_height="0dp"/>
+                        android:layout_height="0dp" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="vertical">
 
                         <ImageView
                             android:layout_width="140dp"
                             android:layout_height="140dp"
                             android:adjustViewBounds="true"
-                            android:src="@drawable/ic_design"/>
+                            android:src="@drawable/ic_design" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:text="Design"
-                            android:typeface="sans"
                             android:textColor="#3d80b9"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp"
+                            android:typeface="sans" />
 
                     </LinearLayout>
 
@@ -123,50 +124,50 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="vertical">
 
                         <ImageView
                             android:layout_width="140dp"
                             android:layout_height="140dp"
                             android:adjustViewBounds="true"
-                            android:src="@drawable/ic_development"/>
+                            android:src="@drawable/ic_development" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:text="Development"
-                            android:typeface="sans"
                             android:textColor="#3d80b9"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp"
+                            android:typeface="sans" />
 
                     </LinearLayout>
 
                     <View
                         android:layout_width="24dp"
-                        android:layout_height="0dp"/>
+                        android:layout_height="0dp" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center">
+                        android:gravity="center"
+                        android:orientation="vertical">
 
                         <ImageView
                             android:layout_width="140dp"
                             android:layout_height="140dp"
                             android:adjustViewBounds="true"
-                            android:src="@drawable/ic_qa"/>
+                            android:src="@drawable/ic_qa" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:text="QA"
-                            android:typeface="sans"
                             android:textColor="#3d80b9"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp"
+                            android:typeface="sans" />
 
                     </LinearLayout>
 
@@ -174,6 +175,94 @@
             </LinearLayout>
         </com.gigamole.library.ShadowLayout>
 
-    </LinearLayout>
+        <com.gigamole.library.ShadowLayout
+            android:id="@+id/sl_round"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:sl_shadow_angle="45"
+            app:sl_shadow_color="#93111111"
+            app:sl_shadow_distance="15dp"
+            app:sl_shadow_radius="8dp">
 
-</FrameLayout>
+            <ImageView
+                android:id="@+id/img_round"
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:scaleType="centerInside" />
+        </com.gigamole.library.ShadowLayout>
+
+        <com.gigamole.library.ShadowLayout
+            android:id="@+id/sl_circle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:sl_shadow_angle="45"
+            app:sl_shadow_color="#93111111"
+            app:sl_shadow_distance="15dp"
+            app:sl_shadow_radius="8dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/doctor_male_round" />
+        </com.gigamole.library.ShadowLayout>
+
+        <TextView
+            android:id="@+id/tv_radius"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="radius  value=%s" />
+
+        <SeekBar
+            android:id="@+id/seekbar_radius"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="30"
+            android:progress="0" />
+
+        <TextView
+            android:id="@+id/tv_zoomdy"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="zoomdy  value=%s" />
+
+        <SeekBar
+            android:id="@+id/seekbar_zoomdy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="600"
+            android:progress="300" />
+
+        <TextView
+            android:id="@+id/tv_offsetDx"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="offsetDx  value=%s" />
+
+        <SeekBar
+            android:id="@+id/seekbar_dx"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="40"
+            android:progress="20" />
+
+        <TextView
+            android:id="@+id/tv_offsetDy"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="offsetDy value=%s" />
+
+        <SeekBar
+            android:id="@+id/seekbar_dy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="40"
+            android:progress="20" />
+        <Switch
+            android:id="@+id/switch_drawCenter"
+            android:checked="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+</ScrollView>
