--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
                 android:layout_height="wrap_content"
                 android:visibility="visible"
                 app:sl_shadow_model="shadowShap"
-                app:sl_shadow_rectroundradius="7dp"
+                app:sl_shadow_rectroundradius="8dp"
                 app:z_depth="z_depth2"
                 app:z_depth_clipcanvas="true"
                 app:z_depth_shape="rect">
@@ -54,7 +54,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="#31B4E1"
-                    android:padding="5dp"
+                    android:padding="10dp"
                     android:text="SimpleZDepth" />
             </com.gigamole.library.ShadowLayout>
 
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:visibility="visible"
                 app:sl_shadow_model="shadowShap"
-                app:sl_shadow_rectroundradius="7dp"
+                app:sl_shadow_rectroundradius="8dp"
                 app:z_depth="z_depth1"
                 app:z_depth_clipcanvas="true"
                 app:z_depth_shape="rect">
@@ -73,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="#31B4E1"
-                    android:padding="5dp"
+                    android:padding="10dp"
                     android:text="Change ZDepth" />
             </com.gigamole.library.ShadowLayout>
         </LinearLayout>
@@ -81,7 +81,7 @@
         <com.gigamole.library.ShadowLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:visibility="visible"
             app:sl_shadow_angle="45"
             app:sl_shadow_color="#9e000000"
             app:sl_shadow_distance="4dp"
@@ -108,7 +108,7 @@
         <com.gigamole.library.ShadowLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:visibility="visible"
             app:sl_shadow_angle="45"
             app:sl_shadow_color="#4ea3e8"
             app:sl_shadow_distance="3dp"
@@ -242,10 +242,11 @@
             android:id="@+id/sl_round"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:sl_shadow_angle="45"
-            app:sl_shadow_color="#93111111"
-            app:sl_shadow_distance="25dp"
-            app:sl_shadow_radius="15dp">
+            app:sl_shadow_color="#83111111"
+            app:sl_shadow_offsetdx="0dp"
+            app:sl_shadow_offsetdy="2dp"
+            app:sl_shadow_zoomdy="-2dp"
+            app:sl_shadow_radius="13dp">
 
             <ImageView
                 android:id="@+id/img_round"
@@ -258,10 +259,11 @@
             android:id="@+id/sl_circle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:sl_shadow_angle="45"
-            app:sl_shadow_color="#93111111"
-            app:sl_shadow_distance="25dp"
-            app:sl_shadow_radius="15dp">
+            app:sl_shadow_color="#83111111"
+            app:sl_shadow_offsetdx="0dp"
+            app:sl_shadow_offsetdy="2dp"
+            app:sl_shadow_zoomdy="-2dp"
+            app:sl_shadow_radius="13dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -281,7 +283,7 @@
             android:id="@+id/seekbar_radius"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:max="30"
+            android:max="20"
             android:progress="0" />
 
         <TextView
@@ -294,8 +296,8 @@
             android:id="@+id/seekbar_zoomdy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:max="200"
-            android:progress="100" />
+            android:max="80"
+            android:progress="40" />
 
         <TextView
             android:id="@+id/tv_offsetDx"
@@ -307,8 +309,8 @@
             android:id="@+id/seekbar_dx"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:max="40"
-            android:progress="20" />
+            android:max="30"
+            android:progress="15" />
 
         <TextView
             android:id="@+id/tv_offsetDy"
@@ -320,8 +322,8 @@
             android:id="@+id/seekbar_dy"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:max="40"
-            android:progress="20" />
+            android:max="30"
+            android:progress="15" />
 
         <Switch
             android:id="@+id/switch_drawCenter"
