--- a/app/src/main/res/layout/activity_change_zdepth.xml
+++ b/app/src/main/res/layout/activity_change_zdepth.xml
@@ -10,12 +10,12 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <com.gigamole.library.ShadowLayout
+        <com.ytjojo.shadowlayout.ShadowLayout
             android:id="@+id/zDepthShadowLayout_toolBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            shadow:sl_shadow_model="shadowShap"
+            shadow:sl_shadow_model="shadowShape"
             shadow:z_depth="z_depth1"
             shadow:z_depth_paddingBottom="z_depth5"
             shadow:z_depth_paddingLeft="z_depth0"
@@ -30,13 +30,13 @@
                 android:background="?attr/colorPrimary"
                 android:minHeight="?attr/actionBarSize" />
 
-        </com.gigamole.library.ShadowLayout>
+        </com.ytjojo.shadowlayout.ShadowLayout>
 
-        <com.gigamole.library.ShadowLayout
+        <com.ytjojo.shadowlayout.ShadowLayout
             android:id="@+id/zDepthShadowLayout_rect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            shadow:sl_shadow_model="shadowShap"
+            shadow:sl_shadow_model="shadowShape"
             shadow:z_depth="z_depth1"
             shadow:z_depth_padding="z_depth5"
             shadow:z_depth_shape="rect">
@@ -48,16 +48,16 @@
                 android:padding="16dp"
                 android:text="Change ZDepth" />
 
-        </com.gigamole.library.ShadowLayout>
+        </com.ytjojo.shadowlayout.ShadowLayout>
 
 
-        <com.gigamole.library.ShadowLayout
+        <com.ytjojo.shadowlayout.ShadowLayout
             android:id="@+id/zDepthShadowLayout_oval"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/view_dummy"
-            shadow:sl_shadow_model="shadowShap"
+            shadow:sl_shadow_model="shadowShape"
             shadow:z_depth="z_depth1"
             shadow:z_depth_padding="z_depth5"
             shadow:z_depth_shape="oval">
@@ -70,7 +70,7 @@
                 android:padding="16dp"
                 android:text="+" />
 
-        </com.gigamole.library.ShadowLayout>
+        </com.ytjojo.shadowlayout.ShadowLayout>
 
         <LinearLayout
             android:id="@+id/linearLayout_changeZDepthButtons_1"
@@ -80,12 +80,12 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <com.gigamole.library.ShadowLayout
+            <com.ytjojo.shadowlayout.ShadowLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/view_dummy"
-                shadow:sl_shadow_model="shadowShap"
+                shadow:sl_shadow_model="shadowShape"
                 shadow:sl_shadow_rectroundradius="5dp"
                 shadow:z_depth="z_depth3"
                 shadow:z_depth_clipcanvas="true"
@@ -99,14 +99,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ZDepth 0" />
-            </com.gigamole.library.ShadowLayout>
+            </com.ytjojo.shadowlayout.ShadowLayout>
 
-            <com.gigamole.library.ShadowLayout
+            <com.ytjojo.shadowlayout.ShadowLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/view_dummy"
-                shadow:sl_shadow_model="shadowShap"
+                shadow:sl_shadow_model="shadowShape"
                 shadow:sl_shadow_rectroundradius="7dp"
                 shadow:z_depth="z_depth1"
                 shadow:z_depth_clipcanvas="true"
@@ -121,14 +121,14 @@
                     android:layout_height="wrap_content"
                     android:text="ZDepth 1" />
 
-            </com.gigamole.library.ShadowLayout>
+            </com.ytjojo.shadowlayout.ShadowLayout>
 
-            <com.gigamole.library.ShadowLayout
+            <com.ytjojo.shadowlayout.ShadowLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/view_dummy"
-                shadow:sl_shadow_model="shadowShap"
+                shadow:sl_shadow_model="shadowShape"
                 shadow:sl_shadow_rectroundradius="10dp"
                 shadow:z_depth="z_depth2"
                 shadow:z_depth_padding="z_depth2"
@@ -142,7 +142,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ZDepth 2" />
-            </com.gigamole.library.ShadowLayout>
+            </com.ytjojo.shadowlayout.ShadowLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -152,12 +152,12 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <com.gigamole.library.ShadowLayout
+            <com.ytjojo.shadowlayout.ShadowLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/view_dummy"
-                shadow:sl_shadow_model="shadowShap"
+                shadow:sl_shadow_model="shadowShape"
                 shadow:sl_shadow_rectroundradius="12dp"
                 shadow:z_depth="z_depth3"
                 shadow:z_depth_padding="z_depth3"
@@ -171,14 +171,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ZDepth 3" />
-            </com.gigamole.library.ShadowLayout>
+            </com.ytjojo.shadowlayout.ShadowLayout>
 
-            <com.gigamole.library.ShadowLayout
+            <com.ytjojo.shadowlayout.ShadowLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/view_dummy"
-                shadow:sl_shadow_model="shadowShap"
+                shadow:sl_shadow_model="shadowShape"
                 shadow:sl_shadow_rectroundradius="14dp"
                 shadow:z_depth="z_depth4"
                 shadow:z_depth_padding="z_depth4"
@@ -192,7 +192,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ZDepth 4" />
-            </com.gigamole.library.ShadowLayout>
+            </com.ytjojo.shadowlayout.ShadowLayout>
 
         </LinearLayout>
 
@@ -202,12 +202,12 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <com.gigamole.library.ShadowLayout
+            <com.ytjojo.shadowlayout.ShadowLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/view_dummy"
-                shadow:sl_shadow_model="shadowShap"
+                shadow:sl_shadow_model="shadowShape"
                 shadow:sl_shadow_rectroundradius="15dp"
                 shadow:z_depth="z_depth5"
                 shadow:z_depth_padding="z_depth5"
@@ -221,13 +221,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ZDepth 5" />
-            </com.gigamole.library.ShadowLayout>
-            <com.gigamole.library.ShadowLayout
+            </com.ytjojo.shadowlayout.ShadowLayout>
+            <com.ytjojo.shadowlayout.ShadowLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/view_dummy"
-                shadow:sl_shadow_model="shadowShap"
+                shadow:sl_shadow_model="shadowShape"
                 shadow:sl_shadow_rectroundradius="17dp"
                 shadow:z_depth="z_depth6"
                 shadow:z_depth_padding="z_depth5"
@@ -241,7 +241,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="ZDepth 6" />
-            </com.gigamole.library.ShadowLayout>
+            </com.ytjojo.shadowlayout.ShadowLayout>
 
 
         </LinearLayout>
