--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="#fff"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,6 +46,7 @@
                 app:sl_shadow_model="shadowShape"
                 app:sl_shadow_rectroundradius="8dp"
                 app:z_depth="z_depth2"
+                app:z_depth_padding="z_depth2"
                 app:z_depth_clipcanvas="true"
                 app:z_depth_shape="rect">
 
@@ -65,6 +66,7 @@
                 app:sl_shadow_model="shadowShape"
                 app:sl_shadow_rectroundradius="8dp"
                 app:z_depth="z_depth1"
+                app:z_depth_padding="z_depth2"
                 app:z_depth_clipcanvas="true"
                 app:z_depth_shape="rect">
 
@@ -79,163 +81,41 @@
         </LinearLayout>
 
         <com.ytjojo.shadowlayout.ShadowLayout
+            android:id="@+id/sl_goAngleActivity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="visible"
             app:sl_shadow_angle="45"
-            app:sl_shadow_color="#9e000000"
+            app:sl_shadow_color="#9e222222"
             app:sl_shadow_distance="4dp"
             app:sl_shadow_radius="4dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="56dp"
-                android:layout_marginBottom="68dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/ic_logo" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|center_horizontal"
-                android:text="HOW WE WORK"
+                android:text="AutoShap UseAngle"
                 android:textColor="#414141"
                 android:textSize="18sp"
+                android:textStyle="bold"
                 android:typeface="sans" />
 
         </com.ytjojo.shadowlayout.ShadowLayout>
-
         <com.ytjojo.shadowlayout.ShadowLayout
+            android:id="@+id/sl_goSimpleAuto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible"
-            app:sl_shadow_angle="45"
-            app:sl_shadow_color="#4ea3e8"
-            app:sl_shadow_distance="3dp"
-            app:sl_shadow_radius="5dp">
+            app:sl_shadow_color="#83111111"
+            app:sl_shadow_offsetdx="0dp"
+            app:sl_shadow_offsetdy="1dp"
+            app:sl_shadow_zoomdy="-2dp"
+            app:sl_shadow_radius="6dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="140dp"
-                            android:layout_height="140dp"
-                            android:adjustViewBounds="true"
-                            android:src="@drawable/ic_strategy" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:text="Strategy"
-                            android:textColor="#3d80b9"
-                            android:textSize="18sp"
-                            android:typeface="sans" />
-
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="24dp"
-                        android:layout_height="0dp" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="140dp"
-                            android:layout_height="140dp"
-                            android:adjustViewBounds="true"
-                            android:src="@drawable/ic_design" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:text="Design"
-                            android:textColor="#3d80b9"
-                            android:textSize="18sp"
-                            android:typeface="sans" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="140dp"
-                            android:layout_height="140dp"
-                            android:adjustViewBounds="true"
-                            android:src="@drawable/ic_development" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:text="Development"
-                            android:textColor="#3d80b9"
-                            android:textSize="18sp"
-                            android:typeface="sans" />
-
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="24dp"
-                        android:layout_height="0dp" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:layout_width="140dp"
-                            android:layout_height="140dp"
-                            android:adjustViewBounds="true"
-                            android:src="@drawable/ic_qa" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="8dp"
-                            android:text="QA"
-                            android:textColor="#3d80b9"
-                            android:textSize="18sp"
-                            android:typeface="sans" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-            </LinearLayout>
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:src="@drawable/poly" />
         </com.ytjojo.shadowlayout.ShadowLayout>
 
         <com.ytjojo.shadowlayout.ShadowLayout
@@ -326,8 +206,9 @@
             android:progress="15" />
 
         <Switch
+            android:layout_margin="10dp"
             android:id="@+id/switch_drawCenter"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true" />
     </LinearLayout>
