--- a/app/src/main/res/layout/activity_simplepath.xml
+++ b/app/src/main/res/layout/activity_simplepath.xml
@@ -12,11 +12,12 @@
         android:layout_height="match_parent" />
    <com.ytjojo.shadowlayout.ShadowLayout
        app:sl_shadow_model="shadowPath"
+       android:id="@+id/ShadowLayout"
        app:shadow_path_coordinatex1="0.3"
        app:shadow_path_coordinatey1="0.9"
        app:shadow_path_coordinatex2="0.7"
-       app:shadow_path_coordinatey2="0.9"
        app:shadow_path_startleft_y_rate="0.7"
+       app:shadow_path_coordinatey2="0.9"
        app:shadow_path_endright_y_rate="0.7"
        app:sl_shadow_offsetdy="1dp"
        android:layout_width="match_parent"
