--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -234,5 +234,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true" />
+
+
+        <TextView
+            android:id="@+id/tv_blurmaskfilterView"
+            android:text="BlurMaskFilterView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </ScrollView>
